<resources>
    <string name="app_name">Travens</string>
    <string name="person_with_a_handphone">Person with a handphone</string>
    <string name="desc_onboard_1">Buat sendiri rencana perjalananmu ke destinasi impian.</string>
    <string name="plan_your_journey">Rencanakan Perjalananmu</string>
    <string name="fixed_budget">Sesuaikan dengan anggaran</string>
    <string name="desc_onboard_2">Kostumisasi rencana perjalananmu sesuai dengan kebutuhan dan anggaran.</string>
    <string name="marketplace">Sebuah wadah Marketplace</string>
    <string name="desc_onboard_3">Anda dapat menjual barang dan jasa di platform marketplace kami.</string>
    <string name="skip">Lewati</string>
    <string name="illustration_with_briefcase">illustration with briefcase</string>
    <string name="logo_travens">Logo Travens</string>
    <string name="lanjut">Lanjut</string>
    <string name="mulai">Mulai</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="err_invalid_email">Email tidak valid</string>
    <string name="sudah_mempunyai_akun">Sudah mempunyai akun?</string>
    <string name="masuk_dengan_email">Masuk dengan Email</string>
    <string name="nikmati_perjalanan">Nikmati Perjalanan</string>
    <string name="buat_disini">Buat Disini</string>
    <string name="masuk">Masuk</string>
    <string name="datar_dengan_email">Datar dengan Email</string>
    <string name="mulai_perjalanan_baru">Mulai Perjalanan Baru</string>
    <string name="nama">Nama</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="no_telp">No Telp</string>
    <string name="daftar">Daftar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_saya">Profile Saya</string>
    <string name="title_place_holder">Sleman, Jogjakarta</string>
    <string name="_4_hari_2_malam">4 hari 2 malam</string>
    <string name="budget">Budget : Rp 4.000.000/orang</string>
    <string name="rating">5/5</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="itenarary_yang_sudah_terbit">Itenarary yang sudah terbit</string>
    <string name="test_com">test.com</string>
    <string name="dki_jakarta_indonesia">DKI Jakarta, Indonesia</string>
    <string name="gender">Pria</string>
    <string name="date">Anggota sejak 17 Mei 2022</string>
    <string name="desc_account">A backpacker who loves to travelling around.</string>
    <string name="itinerary">Itinerary</string>
    <string name="sum_following">10</string>
    <string name="followed">Diikuti</string>
    <string name="sum_follower">100</string>
    <string name="follower">Pengikut</string>
    <string name="sum_itinerary">19</string>
    <string name="name">Zeen Abigail</string>
    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="preview_for_image_to_upload">Preview for Image to Upload</string>
    <string name="camera_button_icon">camera button icon</string>
    <string name="gallery_button_icon">gallery button icon</string>
    <string name="see_more">See More</string>
    <string name="click_for_more">click for more</string>
    <string name="see_detail">see detail</string>
    <string name="the_object">The Object</string>
    <string name="is">is</string>
    <string name="description">Description</string>
    <string name="the_object_is">The Object is</string>
    <string name="placeholder_image">placeholder image</string>
    <string name="location_icon">location icon</string>
    <string name="phone_icon">phone icon</string>
    <string name="clock_icon">clock icon</string>
    <string name="take_a_picture_or_pick_file_from_gallery">Take a picture or pick file from gallery</string>
    <string name="ambil_gambar_melalui_kamera_atau_galeri">Ambil gambar melalui kamera atau galeri</string>
    <string name="unggah">Unggah</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="objek_terdeteksi_adalah">Objek terdeteksi adalah</string>
    <string name="lihat_detail">Lihat detail</string>
</resources>